WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315720
calendar.google.com: Safari: Print job fails to start when attempting to print Google Calendar
https://bugs.webkit.org/show_bug.cgi?id=315720
Summary
calendar.google.com: Safari: Print job fails to start when attempting to prin...
joanne_pan2
Reported
2026-05-27 16:36:41 PDT
** NOTE: this is a customer report on production HW & SW ** ISSUE DESCRIPTION: Customer tries to print Google Calendar using Safari at calendar.google.com and the printing job fails to start with no alerts or errors. CONFIGURATION: MacBook Neo + HP LaserJet Pro M15W STEPS TO REPRODUCE: While at calendar.google.com in Safari : - Click on Settings icon at top of window - Clicks on [Print] ACTUAL RESULTS: Print preview appears and the customer clicks [Print] No additional print dialog window or any error message/alert appears Print job fails to start EXPECTED RESULTS: Expects print job to start and the calendar to print similar to how it does using the Google Chrome application ISSUE TIMESTAMP: 3/26/2026 at 11:05:14 AM EST - calendar.google.com website is loaded in Safari 3/26/2026 at 11:05:23 AM EST - Goes to Settings along top of website and selects ‘Print’ 3/26/2026 at 11:05:24 AM EST - Sees Print preview window appear and selects ‘Print’ from bottom of window 3/26/2026 at 11:05:34 AM EST - No additional print dialog window appears and printer job fails to start
Attachments
Add attachment
proposed patch, testcase, etc.
joanne_pan2
Comment 1
2026-05-27 16:36:52 PDT
rdar://173413224
joanne_pan2
Comment 2
2026-05-27 16:58:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65853
joanne_pan2
Comment 3
2026-06-02 11:21:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66277
EWS
Comment 4
2026-06-03 16:06:42 PDT
Committed
314503@main
(3a096e98b91e): <
https://commits.webkit.org/314503@main
> Reviewed commits have been landed. Closing PR #66277 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug