calendar.google.com: Safari: Print job fails to start when attempting to print Google Calendar https://bugs.webkit.org/show_bug.cgi?id=315720 rdar://173413224

Reviewed by NOBODY (OOPS!).

The problem: clicking "Print" inside Gcal's print preview silently does
nothing in Safari. Gcal has 2 different print paths based on browser:
1) Chromium browsers: a load handler on a hidden iframe calls
iframe.contentWindow.print() once the iframe loads
2) non-Chromium browsers (Firefox, Safari): the server returns a PDF with
an embedded OpenAction that runs this.print() in the PDF's own JavaScript,
which auto-fires the print dialog when the PDF loads

Firefox prints fine because Gecko honors PDF OpenAction execution. WebKit's
PDF viewer doesn't, so stock Safari hits the same non-Chromium path Firefox
does but the auto-print never fires.

The fix: have UA override return a Chrome/macOS string for Gcal so Gcal's
JS routes Safari to the Chromium path (which calls print() from JS, no PDF
OpenAction needed). Matches the existing pattern for outlook.live.com.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsCustomUserAgentOverride):